--- a/multiplayer_shooter.html
+++ b/multiplayer_shooter.html
@@ -32,6 +32,7 @@
             text-align: left;
             max-width: 600px;
             width: 100%;
+            margin-top: 20px;
         }
         .info-panel h2 {
             margin-top: 0;
@@ -40,7 +41,7 @@
         .info-panel p {
             margin-bottom: 5px;
         }
-        .info-panel code {
+        .info-panel kbd {
             background-color: #555;
             padding: 2px 4px;
             border-radius: 3px;
@@ -58,10 +59,15 @@
             margin-top: 15px;
             font-size: 0.9em;
         }
-        .game-controls {
+        .game-controls, .player-setup {
             margin-bottom: 10px;
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            align-items: center;
+            gap: 10px;
         }
-        .game-controls button {
+        .game-controls button, .player-setup button, .player-setup input[type="text"] {
             background-color: #007bff;
             color: white;
             padding: 10px 20px;
@@ -69,20 +75,73 @@
             border-radius: 5px;
             cursor: pointer;
             font-size: 1em;
-            margin: 5px;
             vertical-align: middle;
         }
-        .game-controls button:hover {
+        .player-setup input[type="text"] {
+            background-color: #555;
+            color: white;
+            border: 1px solid #777;
+            text-align: center;
+            width: 150px;
+        }
+        .game-controls button:hover, .player-setup button:hover {
             background-color: #0056b3;
         }
+
+        /* Notification Area */
+        #notification-area {
+            position: absolute;
+            top: 20px;
+            right: 20px;
+            width: 250px;
+            max-height: 80vh;
+            overflow-y: auto;
+            pointer-events: none; /* Allows clicks to pass through */
+            z-index: 1000;
+        }
+        .notification {
+            background-color: rgba(0, 0, 0, 0.7);
+            color: white;
+            padding: 10px 15px;
+            border-radius: 5px;
+            margin-bottom: 10px;
+            opacity: 0; /* Start hidden */
+            transition: opacity 0.5s ease-in-out, transform 0.5s ease-out;
+            transform: translateX(100%); /* Start off-screen */
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
+            pointer-events: auto; /* Make notification clickable if needed, though not for this demo */
+        }
+        .notification.show {
+            opacity: 1;
+            transform: translateX(0);
+        }
+        .notification.hide {
+            opacity: 0;
+            transform: translateX(100%);
+        }
+        .notification.info { background-color: rgba(0, 123, 255, 0.7); } /* Blue */
+        .notification.success { background-color: rgba(40, 167, 69, 0.7); } /* Green */
+        .notification.warning { background-color: rgba(255, 193, 7, 0.7); } /* Yellow */
+        .notification.error { background-color: rgba(220, 53, 69, 0.7); } /* Red */
     </style>
 </head>
 <body>
+    <div id="notification-area"></div>
+
     <h1>Multiplayer 2D Shooter (Client Demo)</h1>
+
+    <div class="player-setup">
+        <label for="playerNameInput">Your Name:</label>
+        <input type="text" id="playerNameInput" placeholder="Enter your name" maxlength="12">
+        <button id="setPlayerNameButton">Set Name</button>
+    </div>
+
     <div class="game-controls">
         <button id="fullscreenButton">Toggle Fullscreen</button>
     </div>
+
     <canvas id="gameCanvas" width="800" height="600"></canvas>
+
     <div class="info-panel">
         <h2>Game Status: <span id="connectionStatus" class="disconnected">Disconnected</span></h2>
         <p>This is a **client-side demonstration** of a multiplayer game concept.</p>
@@ -101,7 +160,10 @@
         const canvas = document.getElementById('gameCanvas');
         const ctx = canvas.getContext('2d');
         const connectionStatusSpan = document.getElementById('connectionStatus');
-        const fullscreenButton = document.getElementById('fullscreenButton'); // New element
+        const fullscreenButton = document.getElementById('fullscreenButton');
+        const playerNameInput = document.getElementById('playerNameInput'); // New
+        const setPlayerNameButton = document.getElementById('setPlayerNameButton'); // New
+        const notificationArea = document.getElementById('notification-area'); // New
 
         const PLAYER_SPEED = 3;
         const BULLET_SPEED = 10;
@@ -111,9 +173,14 @@
         const MUZZLE_FLASH_DURATION = 5; // frames
         const HIT_MARKER_DURATION = 15; // frames
         const PLAYER_HIT_FLASH_DURATION = 10; // frames
+        const NOTIFICATION_DISPLAY_TIME = 3000; // ms
+
+        // Initialize localPlayer ID with a default or from localStorage if available
+        let defaultPlayerName = localStorage.getItem('playerName') || 'Player_' + Math.floor(Math.random() * 1000);
+        playerNameInput.value = defaultPlayerName;
 
         let localPlayer = {
-            id: 'player_' + Math.random().toString(36).substr(2, 9),
+            id: defaultPlayerName, // Will be updated by input
             x: canvas.width / 2,
             y: canvas.height / 2,
             color: `hsl(${Math.random() * 360}, 70%, 60%)`,
@@ -165,6 +232,26 @@
             }
         }
 
+        // --- Notification System ---
+        function showNotification(message, type = 'info', duration = NOTIFICATION_DISPLAY_TIME) {
+            const notificationDiv = document.createElement('div');
+            notificationDiv.classList.add('notification', type);
+            notificationDiv.textContent = message;
+            notificationArea.prepend(notificationDiv); // Add to top
+
+            // Trigger fade-in
+            setTimeout(() => notificationDiv.classList.add('show'), 10);
+
+            // Trigger fade-out and removal
+            setTimeout(() => {
+                notificationDiv.classList.remove('show');
+                notificationDiv.classList.add('hide');
+                notificationDiv.addEventListener('transitionend', () => {
+                    notificationDiv.remove();
+                }, { once: true });
+            }, duration);
+        }
+
         let ws;
 
         function connectToServer() {
@@ -176,7 +263,9 @@
                 console.log('Connected to WebSocket server.');
                 connectionStatusSpan.textContent = 'Connected';
                 connectionStatusSpan.className = 'connected';
+                // Send initial player data with the chosen name
                 ws.send(JSON.stringify({ type: 'player_join', player: localPlayer }));
+                showNotification(`Connected! Welcome, ${localPlayer.id}!`, 'success');
             };
 
             ws.onmessage = (event) => {
@@ -184,6 +273,26 @@
 
                 switch (message.type) {
                     case 'game_state_update':
+                        // Detect new players joining or existing players disconnecting
+                        const currentPlayersIds = Object.keys(otherPlayers);
+                        const newPlayersIds = Object.keys(message.players || {});
+
+                        // Players who joined
+                        for (const newId of newPlayersIds) {
+                            if (newId !== localPlayer.id && !currentPlayersIds.includes(newId) && message.players[newId]) {
+                                showNotification(`${message.players[newId].id} joined the game.`, 'info');
+                                // Initialize _prevHealth for new players
+                                message.players[newId]._prevHealth = message.players[newId].health;
+                            }
+                        }
+
+                        // Players who left
+                        for (const oldId of currentPlayersIds) {
+                            if (oldId !== localPlayer.id && !newPlayersIds.includes(oldId)) {
+                                showNotification(`${otherPlayers[oldId].id} left the game.`, 'warning');
+                            }
+                        }
+
                         otherPlayers = message.players || {};
                         bullets = message.bullets || [];
 
@@ -202,28 +311,58 @@
                         }
 
                         for (const id in otherPlayers) {
-                            if (otherPlayers[id].health !== (otherPlayers[id]._prevHealth || otherPlayers[id].health)) {
-                                if (otherPlayers[id].health < (otherPlayers[id]._prevHealth || otherPlayers[id].health)) {
+                            // Track health changes for hit flash and defeat notifications
+                            if (otherPlayers[id]._prevHealth === undefined) {
+                                otherPlayers[id]._prevHealth = otherPlayers[id].health;
+                            }
+
+                            if (otherPlayers[id].health !== otherPlayers[id]._prevHealth) {
+                                if (otherPlayers[id].health < otherPlayers[id]._prevHealth) {
                                     otherPlayers[id].hitFlashTimer = PLAYER_HIT_FLASH_DURATION;
                                     createImpactParticles(otherPlayers[id].x, otherPlayers[id].y, otherPlayers[id].color);
+                                    if (otherPlayers[id].health <= 0) {
+                                        showNotification(`${otherPlayers[id].id} was defeated!`, 'error');
+                                    } else {
+                                        showNotification(`${otherPlayers[id].id} was hit!`, 'warning', 1500); // Shorter duration for hits
+                                    }
                                 }
                             }
                             otherPlayers[id]._prevHealth = otherPlayers[id].health;
                         }
                         break;
-                    case 'player_hit':
+                    case 'player_hit': // This message is assumed if server sends explicit hit events
                         if (message.id === localPlayer.id) {
                             localPlayer.health = message.newHealth;
                             localPlayer.hitFlashTimer = PLAYER_HIT_FLASH_DURATION;
                             createImpactParticles(localPlayer.x, localPlayer.y, localPlayer.color);
                             console.log(`Local player hit! Health: ${localPlayer.health}`);
+                            if (message.newHealth <= 0) {
+                                showNotification(`You were defeated!`, 'error');
+                            } else {
+                                showNotification(`You were hit!`, 'warning', 1500);
+                            }
                         } else if (otherPlayers[message.id]) {
                             otherPlayers[message.id].health = message.newHealth;
                             otherPlayers[message.id].hitFlashTimer = PLAYER_HIT_FLASH_DURATION;
                             createImpactParticles(otherPlayers[message.id].x, otherPlayers[message.id].y, otherPlayers[message.id].color);
+                            if (message.newHealth <= 0) {
+                                showNotification(`${otherPlayers[message.id].id} was defeated!`, 'error');
+                            } else {
+                                showNotification(`${otherPlayers[message.id].id} was hit!`, 'warning', 1500);
+                            }
                         }
                         if (message.hitX && message.hitY) {
                             hitMarkers.push({ x: message.hitX, y: message.hitY, timer: HIT_MARKER_DURATION });
+                        }
+                        break;
+                    case 'player_disconnected': // Server should send this
+                        if (message.id && otherPlayers[message.id]) {
+                            showNotification(`${otherPlayers[message.id].id} left the game.`, 'warning');
+                        }
+                        break;
+                    case 'player_joined': // Server should send this
+                        if (message.player && message.player.id !== localPlayer.id) {
+                            showNotification(`${message.player.id} joined the game.`, 'info');
                         }
                         break;
                 }
@@ -233,6 +372,7 @@
                 console.log('Disconnected from WebSocket server. Attempting to reconnect in 3s...');
                 connectionStatusSpan.textContent = 'Disconnected';
                 connectionStatusSpan.className = 'disconnected';
+                showNotification('Disconnected from server. Reconnecting...', 'error');
                 setTimeout(connectToServer, 3000);
             };
 
@@ -240,6 +380,7 @@
                 console.error('WebSocket error:', error);
                 connectionStatusSpan.textContent = 'Error';
                 connectionStatusSpan.className = 'disconnected';
+                showNotification('WebSocket connection error!', 'error');
                 ws.close();
             };
         }
@@ -295,7 +436,6 @@
                 ws.send(JSON.stringify({ type: 'player_move', id: localPlayer.id, x: localPlayer.x, y: localPlayer.y }));
             }
 
-            // Spacebar handling
             if (keys[' '] && (Date.now() - localPlayer.lastShotTime > localPlayer.shootCooldown)) {
                 localPlayer.lastShotTime = Date.now();
 
@@ -408,7 +548,8 @@
                 ctx.fillStyle = 'white';
                 ctx.font = '10px Arial';
                 ctx.textAlign = 'center';
-                ctx.fillText(player.id.substring(0, 8), player.x, player.y + PLAYER_RADIUS + 10);
+                // Display player name and score
+                ctx.fillText(`${player.id} (Score: ${player.score})`, player.x, player.y + PLAYER_RADIUS + 10);
             }
 
             ctx.beginPath();
@@ -427,7 +568,8 @@
             ctx.fillStyle = 'white';
             ctx.font = '12px Arial';
             ctx.textAlign = 'center';
-            ctx.fillText(`You (${localPlayer.id.substring(0, 8)}) Score: ${localPlayer.score}`, localPlayer.x, localPlayer.y + PLAYER_RADIUS + 15);
+            // Display local player name and score
+            ctx.fillText(`You (${localPlayer.id}) Score: ${localPlayer.score}`, localPlayer.x, localPlayer.y + PLAYER_RADIUS + 15);
 
             hitMarkers.forEach(marker => {
                 const opacity = marker.timer / HIT_MARKER_DURATION;
@@ -456,11 +598,10 @@
         gameLoop();
 
         // --- Input Handling ---
-        // Prevent default browser scrolling when spacebar is pressed
         window.addEventListener('keydown', (e) => {
             keys[e.key.toLowerCase()] = true;
             if (e.key === ' ' || e.key === 'ArrowUp' || e.key === 'ArrowDown' || e.key === 'ArrowLeft' || e.key === 'ArrowRight') {
-                e.preventDefault(); // Prevent default action (like scrolling)
+                e.preventDefault();
             }
         });
 
@@ -471,31 +612,28 @@
         // --- Fullscreen Toggle ---
         fullscreenButton.addEventListener('click', () => {
             if (!document.fullscreenElement) {
-                // Request fullscreen for the canvas element
                 if (canvas.requestFullscreen) {
                     canvas.requestFullscreen();
-                } else if (canvas.mozRequestFullScreen) { /* Firefox */
+                } else if (canvas.mozRequestFullScreen) {
                     canvas.mozRequestFullScreen();
-                } else if (canvas.webkitRequestFullscreen) { /* Chrome, Safari & Opera */
+                } else if (canvas.webkitRequestFullscreen) {
                     canvas.webkitRequestFullscreen();
-                } else if (canvas.msRequestFullscreen) { /* IE/Edge */
+                } else if (canvas.msRequestFullscreen) {
                     canvas.msRequestFullscreen();
                 }
             } else {
-                // Exit fullscreen
                 if (document.exitFullscreen) {
                     document.exitFullscreen();
-                } else if (document.mozCancelFullScreen) { /* Firefox */
+                } else if (document.mozCancelFullScreen) {
                     document.mozCancelFullScreen();
-                } else if (document.webkitExitFullscreen) { /* Chrome, Safari & Opera */
+                } else if (document.webkitExitFullscreen) {
                     document.webkitExitFullscreen();
-                } else if (document.msExitFullscreen) { /* IE/Edge */
+                } else if (document.msExitFullscreen) {
                     document.msExitFullscreen();
                 }
             }
         });
 
-        // Optional: Listen for fullscreen change to update button text or other UI
         document.addEventListener('fullscreenchange', () => {
             if (document.fullscreenElement) {
                 fullscreenButton.textContent = 'Exit Fullscreen';
@@ -503,25 +641,52 @@
                 fullscreenButton.textContent = 'Toggle Fullscreen';
             }
         });
-        document.addEventListener('mozfullscreenchange', () => { /* Firefox */
+        document.addEventListener('mozfullscreenchange', () => {
             if (document.mozFullScreenElement) {
                 fullscreenButton.textContent = 'Exit Fullscreen';
             } else {
                 fullscreenButton.textContent = 'Toggle Fullscreen';
             }
         });
-        document.addEventListener('webkitfullscreenchange', () => { /* Chrome, Safari & Opera */
+        document.addEventListener('webkitfullscreenchange', () => {
             if (document.webkitFullscreenElement) {
                 fullscreenButton.textContent = 'Exit Fullscreen';
             } else {
                 fullscreenButton.textContent = 'Toggle Fullscreen';
             }
         });
-        document.addEventListener('msfullscreenchange', () => { /* IE/Edge */
+        document.addEventListener('msfullscreenchange', () => {
             if (document.msFullscreenElement) {
                 fullscreenButton.textContent = 'Exit Fullscreen';
             } else {
                 fullscreenButton.textContent = 'Toggle Fullscreen';
+            }
+        });
+
+        // --- Player Name Logic ---
+        setPlayerNameButton.addEventListener('click', () => {
+            let newName = playerNameInput.value.trim();
+            if (newName.length === 0) {
+                newName = 'Player_' + Math.floor(Math.random() * 1000); // Fallback to random if empty
+                playerNameInput.value = newName;
+            }
+            if (newName.length > 12) { // Enforce max length if needed
+                newName = newName.substring(0, 12);
+                playerNameInput.value = newName;
+            }
+
+            if (localPlayer.id !== newName) {
+                localPlayer.id = newName;
+                localStorage.setItem('playerName', newName); // Save name for future visits
+                showNotification(`Your name set to: ${newName}. Reconnecting...`, 'info');
+                // Reconnect WebSocket to send new player ID to server
+                if (ws && ws.readyState === WebSocket.OPEN) {
+                    ws.close(); // This will trigger onclose and reconnect logic
+                } else {
+                    connectToServer(); // Directly connect if not already
+                }
+            } else {
+                showNotification(`Name is already ${newName}.`, 'info', 1500);
             }
         });
     </script>
